[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Base.tres" type="DynamicFont" id=1]
[ext_resource path="res://Starting Scene.gd" type="Script" id=2]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerConfigure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateServer" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -451.0
margin_top = -244.0
margin_right = -39.0
margin_bottom = -121.0
custom_fonts/font = ExtResource( 1 )
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -244.0
margin_right = -38.0
margin_bottom = -119.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 33.0
margin_top = -246.0
margin_right = 452.0
margin_bottom = -118.0
custom_fonts/font = ExtResource( 1 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIP" type="LineEdit" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -311.0
margin_top = 314.0
margin_right = 297.0
margin_bottom = 430.0
custom_fonts/font = ExtResource( 1 )
align = 1
placeholder_text = "Enter IP Address"

[node name="Or" type="RichTextLabel" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -41.5
margin_right = 74.5
margin_bottom = 41.5
custom_fonts/normal_font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCount" type="RichTextLabel" parent="MultiplayerConfigure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -298.0
margin_top = 204.0
margin_right = 313.0
margin_bottom = 287.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeviceIP" type="Label" parent="MultiplayerConfigure"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -159.0
margin_right = 2.0
margin_bottom = -78.0
custom_fonts/font = ExtResource( 1 )
text = "192.1.1.1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -347.0
margin_top = -77.0
margin_right = 347.0
margin_bottom = 77.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]The game will be starting soon[/center]"
text = "The game will be starting soon"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MultiplayerConfigure/CreateServer" to="." method="_on_CreateServer_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="MultiplayerConfigure/JoinServer" to="." method="_on_JoinServer_pressed"]
